bottom navigation added & App Navigation Simplified

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="skip">Skip</string>
+    <string name="skip">Skip ></string>
     <string name="continue_with_phone">Continue with Phone</string>
     <string name="continue_with_facebook">Continue with Facebook</string>
     <string name="continue_with_google">Continue with Google</string>
@@ -11,6 +11,16 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="app_description">Wholesale exports from your Nearest Warehouse. Fresh Products Directly from the Farmers with Easy Discounts and offers on Large Sales.</string>
+    <string name="top_sales">Top Sales</string>
+    <string name="top_sales_desc">Curated From Our Fresh Farm</string>
+    <string name="home">Home</string>
+    <string name="categories">Categories</string>
+    <string name="offers">Offers</string>
+    <string name="favourites">Favourites</string>
+    <string name="cart">Cart</string>
+    <string name="account">Account</string>
+    <string name="kisan_example_com">kisan@example.com</string>
 
 
 </resources>
